--- a/testing/index.html
+++ b/testing/index.html
@@ -356,7 +356,7 @@
 
     <div class="container">
         <nav class="nav-links">
-            <a href="../firmware-index.html" class="nav-link primary">
+            <a href="../index.html" class="nav-link primary">
                 <span>✅</span> Stable Releases
             </a>
             <a href="#testing-builds" class="nav-link">
@@ -505,7 +505,7 @@
                     <button class="btn btn-warning" onclick="copyOtaUrl('${device.url || '#'}')">
                         <span>📋</span> Copy OTA URL
                     </button>
-                    <a href="../index.html" class="btn btn-outline">
+                    <a href="../control.html" class="btn btn-outline">
                         <span>🔗</span> Web Control
                     </a>
                 </div>
